<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/contacts_delete_all_dialog_background_width"
    android:layout_height="@dimen/contacts_delete_all_dialog_background_height"
    android:layout_gravity="center"
    android:background="@drawable/bg_popup"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contacts_delete_all_dialog_message_margin_left"
        android:layout_marginRight="@dimen/contacts_delete_all_dialog_message_margin_right"
        android:layout_marginTop="@dimen/contacts_delete_all_dialog_message_margin_top"
        android:gravity="center"
        android:text="@string/STR_DELETE_ALL_CONFIRM"
        android:textColor="#0C1A3D"
        android:textSize="@dimen/contacts_delete_all_dialog_message_font_size" >
    </TextView>
	<ImageView
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:layout_marginLeft="@dimen/contacts_delete_all_dialog_message_split_margin_left"
	    android:layout_marginRight="@dimen/contacts_delete_all_dialog_message_split_margin_right"
	    android:layout_marginTop="@dimen/contacts_delete_all_dialog_message_split_margin_top"
	    android:background="#B5B6C4" >
	</ImageView>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/contacts_delete_all_dialog_comform_margin_top"
	    android:gravity="center"
	    android:orientation="horizontal" >
   		<Button
   		    android:id="@+id/btnContactsDeleteAllDialogCancel"
   		    android:layout_width="@dimen/contacts_delete_all_dialog_conform_button_width"
   		    android:layout_height="@dimen/contacts_delete_all_dialog_conform_button_height"
   		    android:layout_gravity="center"
   		    android:background="@drawable/btn_cancel_shape"
   		    android:text="@string/STR_CANCEL"
   		    android:textColor="@drawable/btn_cancel_textcolor"
   		    android:textSize="@dimen/contacts_delete_all_dialog_conform_button_font_size" >
	    </Button>
		<FrameLayout
		    android:layout_width="20dp"
		    android:layout_height="fill_parent" >
		</FrameLayout>
	    <Button
	        android:id="@+id/btnContactsDeleteAllDialogOk"
	        android:layout_width="@dimen/contacts_delete_all_dialog_conform_button_width"
	        android:layout_height="@dimen/contacts_delete_all_dialog_conform_button_height"
	        android:layout_gravity="center"
	        android:background="@drawable/btn_ok_shape"
	        android:text="@string/STR_OK"
	        android:textColor="@drawable/btn_ok_textcolor"
	        android:textSize="@dimen/contacts_delete_all_dialog_conform_button_font_size" >
	    </Button>
	</LinearLayout>
</LinearLayout>
